# Esp32-CAN-ALS

./: BME680_SETUP.md  CLAUDE.md  CMakeLists.txt  EXPANSION_GUIDE.md  FACTORY_MAIN_RESTRUCTURE.md  OPT4001_INTEGRATION.md  PROTOCOL_UPDATE.md  README.md  build.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.factory  sdkconfig.defaults.main  sdkconfig.old
calibration/: Makefile  calibrate_lux_sensor.cpp
components/bsec/: .gitignore  CMakeLists.txt  Kconfig  README.md  setup_bsec.sh
components/bsec/config/: bsec_iaq_bme688.c  bsec_iaq_bme688.h
main/: CMakeLists.txt  als_driver.c  als_driver.h  bme680_bsec.c  bme680_bsec.h  can_protocol.c  can_protocol.h  firmware_config.h  main.c  main.c.backup  opt3001_driver.c  opt3001_driver.h  opt4001_driver.c  opt4001_driver.h  ota_handler.c  ota_handler.h  sensor_common.h  veml7700_driver.c  veml7700_driver.h
tools/: CAN_SENSOR_TOOL.md  CMakeLists.txt  can-sensor-tool.cpp
